# pnd_adam_u_mujoco

./: .gitattributes  .gitignore  run_pndrobotros2.sh
install/: local_setup.sh  setup.sh
install/cpp_demo/share/cpp_demo/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cpp_demo/share/cpp_demo/cmake/: ament_cmake_export_dependencies-extras.cmake  cpp_demoConfig.cmake
install/cpp_demo/share/cpp_demo/config/: paras.yaml
install/launch_pkg/share/launch_pkg/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
install/pndrobotros2/include/: inspire_hand.h  joint_interface.h  joystick.h  json_constants.hpp  pconfig.hpp  pdata_handler.hpp  pnd_algorithm.h  pnd_hand.h  putil.h  real_robot.h  robot_common.hpp
install/pndrobotros2/include/IMU5123/: IMU5123.h
install/pndrobotros2/lib/: libpnd.so.1.5.1  libtorch_cpu.so.REMOVED.git-id
install/pndrobotros2/lib/pndrobotros2/: imu_node
install/pndrobotros2/share/pndrobotros2/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
mujoco/: urdf2mujocoXml.py
mujoco/model/adam_u/: adam_u.urdf  adam_u.xml  adam_u_stl.xml  scene_adam_u.xml
mujoco/model/adam_u/meshes_dae/: neckPitch.dae  neckYaw.dae  shoulderPitchLeft.dae  shoulderPitchRight.dae  shoulderRollLeft.dae  shoulderRollRight.dae  shoulderYawLeft.dae  shoulderYawRight.dae  waistPitch.dae  wristPitchLeft.dae  wristPitchRight.dae  wristYawLeft.dae  wristYawRight.dae
mujoco/model/adam_u/meshes_stl/: waistPitch_link.STL
(+49 files in other folders)
