<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_pkg</name>
  <version>0.0.0</version>
  <description>ros2 launch</description>
  <maintainer email="dengbo@pndbotics.com">pnd-humanoid</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>cpp_demo</exec_depend>
  <exec_depend>pndrobotros2</exec_depend>
</package>
